<resources>
    <string name="app_name">Shaba Retailers</string>
    <string name="image_content_description">This is an image</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="welcome_to_shaba">Welcome to Shaba</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="logging_in">Logging you in…</string>
    <string name="login_failed">Login failed. Please check your credentials and try again</string>
    <string name="ok">OK</string>
    <string name="password_reset_prompt">A link with instructions to help you reset your password will be sent to your email</string>
    <string name="sending_password_reset_link">Sending password reset link</string>
    <string name="password_reset_error">There was an error sending a password reset link. Please check your email and try again.</string>
    <string name="password_reset_success">A link with instructions to help you reset your password has been sent to your email</string>
    <string name="hello_retailer">Hello retailer!</string>
    <string name="provide_your_details_to_join_shaba">Provide your details to join Shaba</string>
    <string name="country">Country</string>
    <string name="ra_the_tc">I have read &amp; accepted the terms &amp; conditions of using the Shaba retailer\’s application</string>
    <string name="click_here_to_read_tc">Click here to read the terms &amp; conditions</string>
    <string name="join">Join</string>
    <string name="signing_you_up">Signing you up…</string>
    <string name="sign_up_successful">Sign up successful!</string>
    <string name="error_signing_up">There was an error signing you up. Please try again later.</string>
    <string name="okay">Okay</string>
    <string name="okay_u">OKAY</string>
    <string name="field_required">This field is required</string>
    <string name="invalid_input">Invalid input</string>
    <string name="tc_required">You must accept the terms &amp; conditions to join Shaba</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="city">City</string>
    <string name="your_business_name">Your business\'s name</string>
    <string name="your_mobile_number">Your mobile number (international format)</string>
    <string name="your_name">Your name</string>
    <string name="postal_code">Postal/ZIP code</string>
    <string name="postal_address">Postal address</string>
    <string name="required_shipping_details">Your mobile number &amp; name are required for shipping purposes. Please provide correct details.</string>
    <string name="optional_required_state_code">In some countries such as Canada, you must provide a state or province code to be able to receive shipments. If you live in such an area, please provide your state or province code.</string>
    <string name="state_code">State/province code</string>
    <string name="catalog">Catalog</string>
    <string name="finish_creating_retailer">Please finish creating your account to place orders</string>
    <string name="finish_u">FINISH</string>
    <string name="view">View</string>
    <string name="retry_u">RETRY</string>
    <string name="error_loading_items">There was an error getting available bags</string>
    <string name="error_loading_retailer">There was an error getting your information</string>
    <string name="menu">Menu</string>
    <string name="place_order">Place order</string>
    <string name="about_shaba">About Shaba</string>
    <string name="error_loading_user">There was an error loading your information. Please restart the app. If this error persists, please clear the app\'s data and log in again.</string>
    <string name="user_not_verified">You must verify your email address to use this application.</string>
    <string name="verify_u">VERIFY</string>
    <string name="verify_email">Verify email</string>
    <string name="send_verification_email">Send verification link</string>
    <string name="i_have_verified_my_email">I have verified my email</string>
    <string name="sending_verification_email">Attempting to send a verification link to your address…</string>
    <string name="verification_email_sent">A verification link has been sent to your email. Please check your inbox or spam folder.</string>
    <string name="verification_email_not_sent">A verification link could not be sent to your email. Please try again later. </string>
    <string name="checking_verification_status">Checking your verification status…</string>
    <string name="error_checking_verification_status">There was an error checking your status. Please try again later.</string>
    <string name="verification_success">Your email has been verified. Happy shopping!</string>
    <string name="finish_creating">Finish creating your retailer</string>
    <string name="creating">Creating retailer…</string>
    <string name="error_creating">There was an error creating your retailer. Please try again.</string>
    <string name="created">Your retailer information is complete. You can now place orders.</string>
    <string name="title_activity_catalog_item">CatalogItemActivity</string>
    <string name="prices">Prices</string>
    <string name="wholesale_lbl">Wholesale:</string>
    <string name="consignment_lbl">Consignment:</string>
    <string name="commission_lbl">Commission:</string>
    <string name="basic">Basic</string>
    <string name="more">More</string>
    <string name="description">Description</string>
    <string name="size_lbl">Size:</string>
    <string name="material_lbl">Material: </string>
    <string name="weaving_lbl">Weaving:</string>
    <string name="color_lbl">Color:</string>
    <string name="strap_lbl">Strap:</string>
    <string name="strap_length_lbl">Strap length:</string>
    <string name="insert_lbl">Insert:</string>
    <string name="weight_lbl">Weight:</string>
    <string name="sku_lbl">SKU:</string>
    <string name="features">Features</string>
    <string name="title_activity_byob">ByobActivity</string>
    <string name="price_lbl">Price:</string>
    <string name="build_your_box">Build your box</string>
    <string name="choose_bags_in_box">Choose the bags to put in your box</string>
    <string name="choose_your_order_type">Step 1: Choose your order type</string>
    <string name="wahura_bucket_bag">Wahura bucket bag</string>
    <string name="twende_sling_bag">Twende sling bag</string>
    <string name="choose_bags">Step 1: Choose bags</string>
    <string name="keep_adding_bags">Keep adding bags until this bar is full</string>
    <string name="box_full">Box is full!</string>
    <string name="byb_step_2">Step 2: Choose insert colors</string>
    <string name="choose_insert_colors">Choose insert colors</string>
    <string name="choose_insert_colors_ext">Choose the insert colors of your bags</string>
    <string name="tap_color_to_add">Tap on a color to add</string>
    <string name="view_summary">View summary</string>
    <string name="mustard">Mustard</string>
    <string name="dark_brown">Dark brown</string>
    <string name="dusty_pink">Dusty pink</string>
    <string name="taupe">Taupe</string>
    <string name="black">Black</string>
    <string name="confirm_order">Confirm order</string>
    <string name="check_order_details">Check all the details of your order</string>
    <string name="order_details">Order details</string>
    <string name="order_type_lbl">Order type:</string>
    <string name="bags_total_lbl">Bags total:</string>
    <string name="shipping_fee_lbl">Shipping &amp; customs fee:</string>
    <string name="total_cost_lbl">Total cost:</string>
    <string name="recipient_information">Recipient information</string>
    <string name="name_lbl">Name:</string>
    <string name="country_lbl">Country:</string>
    <string name="region_lbl">Region/County/State:</string>
    <string name="city_lbl">City/Town:</string>
    <string name="email_lbl">Email:</string>
    <string name="order_confirmation">Order confirmation</string>
    <string name="order_tc_accepted">I have read &amp; accepted the terms &amp; conditions of placing an order</string>
    <string name="tc">Terms &amp; conditions</string>
    <string name="placing_order">Placing order</string>
    <string name="getting_shipping_costs">Getting shipping costs…</string>
    <string name="error_getting_shipping_costs">There was an error getting shipping costs. Please try again.</string>
    <string name="order_placed">Order placed successfully!</string>
    <string name="cost_breakdown">Cost breakdown</string>
    <string name="cost_of_bags_label">Cost of bags:</string>
    <string name="weight_price_label">Weight price:</string>
    <string name="duties_label">Duties:</string>
    <string name="taxes_label">Taxes:</string>
    <string name="dhl_shipping_fees_label">DHL shipping fees:</string>
    <string name="dhl_express_fee_label">DHL express fee:</string>
    <string name="total_shipping_costs_label">Total shipping costs:</string>
    <string name="total_order_cost_label">Total order cost:</string>
    <string name="costs_in_usd">All costs are in USD</string>
    <string name="payment_bank_details">Payment bank details</string>
    <string name="bank">Bank</string>
    <string name="stanbic_bank">Stanbic Bank</string>
    <string name="branch">Branch</string>
    <string name="garden_city">Garden City</string>
    <string name="account_name">Account name</string>
    <string name="the_shaba_studio">The Shaba Studio</string>
    <string name="account_number">Account number</string>
    <string name="number_account">0100009411849</string>
    <string name="currency">Currency</string>
    <string name="ksh">KSh</string>
    <string name="copy">Copy</string>
    <string name="payment_details">Payment details</string>
    <string name="usd">USD</string>
    <string name="number_account_usd">0100 009 411 857</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="number_credit_card">4069 0610 2115 8318</string>
    <string name="payment_prompt">Please don\'t pay for your order until it is marked as \'Confirmed\'</string>
    <string name="my_orders">My orders</string>
    <string name="terms_conditions">Terms &amp; conditions</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout">Do you want to log out?</string>
    <string name="order_tutorial">Order tutorial</string>
    <string name="find_us_online">Find us online</string>
    <string name="title_activity_edit_retailer">EditRetailerActivity</string>
    <string name="edit_retailer">Edit retailer</string>
    <string name="provide_new_info">Please provide your new info</string>
    <string name="error_editing">There was an error saving your retailer. Please try again.</string>
    <string name="editing">Saving your changes…</string>
    <string name="edited">Changes saved.</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="wrong_password">This password is incorrect</string>
    <string name="password_short">Password must be at least 8 characters</string>
    <string name="current_password">Current password</string>
</resources>